add adaptive studies-section

--- a/prepros.config
+++ b/prepros.config
@@ -882,6 +882,7 @@
       {
         "file": "styles.scss",
         "config": {
+          "autoCompile": false,
           "sourceMap": true,
           "tasks": {
             "autoprefixer": {
